infra/kubernetes/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: bear-erp
  labels:
    app: bear-erp
